--- a/index.html
+++ b/index.html
@@ -109,16 +109,16 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../repositorio-final/img/aaa/barberia (5) (1).jpg" class="d-block w-75 mx-auto" alt="foto1">
+          <img src="./img/aaa/barberia (5) (1).jpg" class="d-block w-75 mx-auto" alt="foto1">
         </div>
         <div class="carousel-item">
-          <img src="../repositorio-final/img/aaa/cerveza (1).jpg" class="d-block w-75 mx-auto" alt="foto2">
+          <img src="./img/aaa/cerveza (1).jpg" class="d-block w-75 mx-auto" alt="foto2">
         </div>
         <div class="carousel-item">
-          <img src="../repositorio-final/img/aaa/barberia 9.jpg" class="d-block w-75 mx-auto" alt="foto3">
+          <img src="./img/aaa/barberia 9.jpg" class="d-block w-75 mx-auto" alt="foto3">
         </div>
         <div class="carousel-item">
-          <img src="../repositorio-final/img/aaa/cerveza (4).jpg" class="d-block w-75 mx-auto" alt="foto4">
+          <img src="./img/aaa/cerveza (4).jpg" class="d-block w-75 mx-auto" alt="foto4">
         </div>
       </div>
       <button class="carousel-control-prev w-50" type="button" data-bs-target="#carouselExampleIndicators"
