--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/estilos.css">
+  <link rel="stylesheet" href="./scss/styles.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -93,8 +94,6 @@
   </nav>
 
 
-  <br><br><br>
-
   <main>
     <div id="carouselExampleIndicators" class="carousel slide">
       <div class="carousel-indicators">
@@ -136,7 +135,7 @@
 
     <br><br><br>
 
-    <section class="horarios">
+    <section>
       <div>
         <h1 class="hor">HORARIOS</h1>
         <ol class="dias">
