modifico fotos pag serv p mobai

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&family=Lora:wght@500&display=swap"
     rel="stylesheet">
 
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Lora:wght@500&family=Open+Sans:ital,wght@1,300&display=swap"
+    rel="stylesheet">
+
+
 
 
   <style>
@@ -58,6 +63,13 @@
       font-family: 'Bebas Neue', sans-serif;
     }
   </style>
+
+  <style>
+    p {
+      font-family: 'Dancing Script', cursive;
+    }
+  </style>
+
 
 </head>
 
@@ -133,8 +145,6 @@
     </div>
 
 
-    <br><br><br>
-
     <section>
       <div>
         <h1 class="hor">HORARIOS</h1>
@@ -159,7 +169,7 @@
         <div class="col-sm-4 text-center">
           <div class="direccion">
             <h2 class="dir text-white">DIRECCION</h2>
-            <P>Lorem ipsum dolor sit amet consectetur</P>
+            <P>Urquiza 1500, Córdoba</P>
           </div>
         </div>
 
