--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -124,7 +124,7 @@
         <div class="col-sm-4 text-center">
           <div class="direccion">
             <h2 class="dir">DIRECCION</h2>
-            <P>Lorem ipsum dolor sit amet consectetur </P>
+            <P>Urquiza 1500, Córdoba</P>
           </div>
         </div>
 
