--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -21,6 +21,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Lora:wght@500&family=Mukta&display=swap"
     rel="stylesheet">
 
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Lora:wght@500&family=Open+Sans:ital,wght@1,300&display=swap"
+    rel="stylesheet">
+
   <style>
     .dir {
       font-family: 'Lobster', cursive;
@@ -36,6 +40,12 @@
   <style>
     .nav-item {
       font-family: 'Lobster', cursive;
+    }
+  </style>
+
+  <style>
+    p {
+      font-family: 'Dancing Script', cursive;
     }
   </style>
 
@@ -115,7 +125,7 @@
         <div class="col-sm-4 text-center">
           <div class="direccion">
             <h2 class="dir">DIRECCION</h2>
-            <P>Lorem ipsum dolor sit amet consectetur </P>
+            <P>Urquiza 1500, Córdoba</P>
           </div>
         </div>
 
