--- a/pages/promos.html
+++ b/pages/promos.html
@@ -28,6 +28,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&family=Lora:wght@500&display=swap"
     rel="stylesheet">
 
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Lora:wght@500&family=Open+Sans:ital,wght@1,300&display=swap"
+    rel="stylesheet">
+
   <style>
     .dir {
       font-family: 'Lobster', cursive;
@@ -55,6 +59,12 @@
   <style>
     h2 {
       font-family: 'Bebas Neue', sans-serif;
+    }
+  </style>
+
+  <style>
+    p {
+      font-family: 'Dancing Script', cursive;
     }
   </style>
 
@@ -143,7 +153,7 @@
         <div class="col-sm-4 text-center">
           <div class="direccion">
             <h2 class="dir">DIRECCION</h2>
-            <P>Lorem ipsum dolor sit amet consectetur </P>
+            <P>Urquiza 1500, Córdoba</P>
           </div>
         </div>
 
