--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -10,7 +10,7 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/estilos.css">
   <link rel="stylesheet" href="../scss/styles.css">
-  
+
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,6 +27,10 @@
 
   <link
     href="https://fonts.googleapis.com/css2?family=Lobster&family=Lora:wght@500&family=Permanent+Marker&display=swap"
+    rel="stylesheet">
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Lora:wght@500&family=Open+Sans:ital,wght@1,300&display=swap"
     rel="stylesheet">
 
 
@@ -57,6 +61,12 @@
   <style>
     h3 {
       font-family: 'Lobster', cursive;
+    }
+  </style>
+
+  <style>
+    p {
+      font-family: 'Dancing Script', cursive;
     }
   </style>
 
@@ -144,7 +154,7 @@
         <div class="col-sm-4 text-center">
           <div class="direccion">
             <h2 class="dir">DIRECCION</h2>
-            <P>Lorem ipsum dolor sit amet consectetur </P>
+            <P>Urquiza 1500, Córdoba</P>
           </div>
         </div>
 
