--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Barberia PG</title>
+  <meta name="keywords" content="barberia, peluqueria, pelo, barba, estilista, corte">
+  <meta name="descripcion" content="Es un sitio de Barberia">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/estilos.css">
@@ -120,16 +122,16 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./img/barberia carr (5) (1).jpg" class="d-block w-75 mx-auto" alt="foto1">
+          <img src="./img/barberiacarr5.jpg" class="d-block w-75 mx-auto" alt="foto1">
         </div>
         <div class="carousel-item">
-          <img src="./img/cerveza carr (1).jpg" class="d-block w-75 mx-auto" alt="foto2">
+          <img src="./img/cervezacarr1.jpg" class="d-block w-75 mx-auto" alt="foto2">
         </div>
         <div class="carousel-item">
-          <img src="./img/barberia carr 9.jpg" class="d-block w-75 mx-auto" alt="foto3">
+          <img src="./img/barberiacarr9.jpg" class="d-block w-75 mx-auto" alt="foto3">
         </div>
         <div class="carousel-item">
-          <img src="./img/cerveza carr (4).jpg" class="d-block w-75 mx-auto" alt="foto4">
+          <img src="./img/cervezacarr4.jpg" class="d-block w-75 mx-auto" alt="foto4">
         </div>
       </div>
       <button class="carousel-control-prev w-50" type="button" data-bs-target="#carouselExampleIndicators"
