agrego animacion logo en pag inicio y p en quienes somos

--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -29,6 +29,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lobster&family=Lora:wght@500&display=swap"
     rel="stylesheet">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
   <style>
     p {
       font-family: 'Dancing Script', cursive;
@@ -98,7 +100,8 @@
       <img src="../img/grupo.jpg" class="col-sm-6 float-sm-end sm-3 ms-sm-3" alt="...">
       <h1 class="qui text-white">QUIENES SOMOS</h1>
       <div>
-        <p>Rescatamos el arte de las antiguas barberías y la experiencia que en ellas se vivía.
+        <p class="parrafo animate__animated animate__backInUp">Rescatamos el arte de las antiguas barberías y la
+          experiencia que en ellas se vivía.
           Conjuntamos tradiciones, servicios de altos estándares de calidad e higiene, y los mejores productos.
           Aquí encontrarás ese espacio que hemos perdido los hombres, donde cortarse el pelo y afeitarse se convierten
           en una terapia de amigos y relajación, más que en un hábito.
