--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Lora:wght@500&family=Open+Sans:ital,wght@1,300&display=swap"
     rel="stylesheet">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
 
 
 
@@ -80,7 +82,7 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <img class="logo" src="./img/logo3.png" alt="logo de la barberia">
+      <img class="logo animate__animated animate__backInDown" src="./img/logo3.png" alt="logo de la barberia">
       <!--<a class="navbar-brand" href="#"></a>-->
       <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
