--- a/index.html
+++ b/index.html
@@ -36,45 +36,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 
-
-
-  <style>
-    .dias {
-      font-family: 'Kanit', sans-serif;
-    }
-  </style>
-
-  <style>
-    .dir {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    .red {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    .nav-item {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    .hor {
-      font-family: 'Bebas Neue', sans-serif;
-    }
-  </style>
-
-  <style>
-    p {
-      font-family: 'Dancing Script', cursive;
-    }
-  </style>
-
-
 </head>
 
 
@@ -125,6 +86,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="./img/barberiacarr5.jpg" class="d-block w-75 mx-auto" alt="foto1">
+          
         </div>
         <div class="carousel-item">
           <img src="./img/cervezacarr1.jpg" class="d-block w-75 mx-auto" alt="foto2">
@@ -181,10 +143,18 @@
           <div>
             <h2 class="red text-white">REDES</h2>
             <div class="logredes">
-              <li class="logre"><img src="./img/facebook.png" alt="logo face"></li>
-              <li class="logre"><img src="./img/instagram.png" alt="logo ins"></li>
-              <li class="logre"><img src="./img/gorjeo.png" alt="logo twt"></li>
-              <li class="logre"><img src="./img/whatsapp.png" alt="logo wht"></li>
+              <li class="logre">
+                <a href="#"><img src="./img/facebook.png" alt="logo face">
+              </li></a>
+              <li class="logre">
+                <a href="#"><img src="./img/instagram.png" alt="logo ins">
+              </li></a>
+              <li class="logre">
+                <a href="#"><img src="./img/gorjeo.png" alt="logo twt">
+              </li></a>
+              <li class="logre">
+                <a href="#"><img src="./img/whatsapp.png" alt="logo wht">
+              </li></a>
             </div>
           </div>
 
