--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,29 +27,6 @@
     href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Lora:wght@500&family=Open+Sans:ital,wght@1,300&display=swap"
     rel="stylesheet">
 
-  <style>
-    .dir {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    .red {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    .nav-item {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    p {
-      font-family: 'Dancing Script', cursive;
-    }
-  </style>
 
 </head>
 
@@ -135,10 +112,18 @@
           <div>
             <h2 class="red">REDES</h2>
             <div class="logredes">
-              <li class="logre"><img src="../img/facebook.png" alt="logo face"></li>
-              <li class="logre"><img src="../img/instagram.png" alt="logo ins"></li>
-              <li class="logre"><img src="../img/gorjeo.png" alt="logo twt"></li>
-              <li class="logre"><img src="../img/whatsapp.png" alt="logo wht"></li>
+              <li class="logre">
+                <a href="#"><img src="../img/facebook.png" alt="logo face">
+              </li></a>
+              <li class="logre">
+                <a href="#"><img src="../img/instagram.png" alt="logo ins">
+              </li></a>
+              <li class="logre">
+                <a href="#"><img src="../img/gorjeo.png" alt="logo twt">
+              </li></a>
+              <li class="logre">
+                <a href="#"><img src="../img/whatsapp.png" alt="logo wht">
+              </li></a>
             </div>
           </div>
 
