--- a/pages/promos.html
+++ b/pages/promos.html
@@ -34,42 +34,6 @@
     href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Lora:wght@500&family=Open+Sans:ital,wght@1,300&display=swap"
     rel="stylesheet">
 
-  <style>
-    .dir {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    .red {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    .nav-item {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    h3 {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    h2 {
-      font-family: 'Bebas Neue', sans-serif;
-    }
-  </style>
-
-  <style>
-    p {
-      font-family: 'Dancing Script', cursive;
-    }
-  </style>
-
 
 </head>
 
@@ -109,34 +73,34 @@
     <div class="card22">
       <div class="card" style="width: 18rem;">
         <img src="../img/barberia (8).jpg" class="card-img-top" alt="...">
-        <div class="card-body bg-success">
+        <div class="card-body bg-gradiet-red">
           <h2 class="menor">MENORES</h2>
           <ol>
             <li>
-              <h3> - Corte + GASEOSA + UNA COMIDA $ 222</h3>
+              <h3> - Corte + GASEOSA + UNA COMIDA $ 2.500</h3>
             </li>
             <li>
-              <h3> - Corte + GASEOSA $ 111</h3>
+              <h3> - Corte + GASEOSA $ 2.000</h3>
             </li>
           </ol>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img src="../img/barberia 11.jpg" class="card-img-top" alt="...">
-        <div class="card-body bg-info">
+        <div class="card-body bg-gradiet-blue">
           <h2 class="mayor">MAYORES</h2>
           <ol>
             <li>
-              <h3>CORTE + BARBA + PINTA Y COMIDA $ 111</h3>
+              <h3>CORTE + BARBA + PINTA Y COMIDA $ 3.000</h3>
             </li>
             <li>
-              <h3>CORTE + Gaseosa $ 25</h3>
+              <h3>CORTE + Gaseosa $ 2.500</h3>
             </li>
             <li>
-              <h3>CORTES + BARBA + PINTA $ 15</h3>
+              <h3>CORTES + BARBA + PINTA $ 2.800</h3>
             </li>
             <li>
-              <h3>CORTE + COMIDA $ 35</h3>
+              <h3>CORTE + COMIDA $ 2.600</h3>
             </li>
           </ol>
         </div>
@@ -163,10 +127,18 @@
           <div>
             <h2 class="red">REDES</h2>
             <div class="logredes">
-              <li class="logre"><img src="../img/facebook.png" alt="logo face"></li>
-              <li class="logre"><img src="../img/instagram.png" alt="logo ins"></li>
-              <li class="logre"><img src="../img/gorjeo.png" alt="logo twt"></li>
-              <li class="logre"><img src="../img/whatsapp.png" alt="logo wht"></li>
+              <li class="logre">
+                <a href="#"><img src="../img/facebook.png" alt="logo face">
+              </li></a>
+              <li class="logre">
+                <a href="#"><img src="../img/instagram.png" alt="logo ins">
+              </li></a>
+              <li class="logre">
+                <a href="#"><img src="../img/gorjeo.png" alt="logo twt">
+              </li></a>
+              <li class="logre">
+                <a href="#"><img src="../img/whatsapp.png" alt="logo wht">
+              </li></a>
             </div>
           </div>
 
