--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -31,35 +31,6 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-  <style>
-    p {
-      font-family: 'Dancing Script', cursive;
-    }
-  </style>
-
-  <style>
-    .dir {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    .red {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    .nav-item {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    .qui {
-      font-family: 'Bebas Neue', sans-serif;
-    }
-  </style>
 
 </head>
 
@@ -137,10 +108,14 @@
           <div>
             <h2 class="red">REDES</h2>
             <div class="logredes">
-              <li class="logre"><img src="../img/facebook.png" alt="logo face"></li>
-              <li class="logre"><img src="../img/instagram.png" alt="logo ins"></li>
-              <li class="logre"><img src="../img/gorjeo.png" alt="logo twt"></li>
-              <li class="logre"><img src="../img/whatsapp.png" alt="logo wht"></li>
+              <li class="logre">
+                <a href="#"><img src="../img/facebook.png" alt="logo face"></li></a>                
+              <li class="logre">
+                <a href="#"><img src="../img/instagram.png" alt="logo ins"></li></a>
+              <li class="logre">
+                <a href="#"><img src="../img/gorjeo.png" alt="logo twt"></li></a>
+              <li class="logre">
+                <a href="#"><img src="../img/whatsapp.png" alt="logo wht"></li></a>
             </div>
           </div>
         </div>
