--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -36,44 +36,6 @@
     rel="stylesheet">
 
 
-  <style>
-    .dir {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    .red {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    .nav-item {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    .tituloServicios {
-      font-family: 'Bebas Neue', sans-serif;
-    }
-  </style>
-
-  <style>
-    h3 {
-      font-family: 'Lobster', cursive;
-    }
-  </style>
-
-  <style>
-    p {
-      font-family: 'Dancing Script', cursive;
-    }
-  </style>
-
-
-
 </head>
 
 <body>
@@ -110,10 +72,10 @@
 
 
     <div class="fot">
-      <div class="ite"><img class="pic11" src="../img/cerveza (1).jpg" alt="foto 1"></div>
-      <div class="ite"><img class="pic22" src="../img/barberia (5).jpg" alt="foto 2"></div>
-      <div class="ite"><img class="pic33" src="../img/cerveza (4).jpg" alt="foto 3"></div>
-      <div class="ite"><img class="pic44" src="../img/barberia (6).jpg" alt="foto 4"></div>
+      <div class="ite"><img class="pic11" src="../img/cervezaserv1.jpg" alt="foto 1"></div>
+      <div class="ite"><img class="pic22" src="../img/barberiaserv1.jpg" alt="foto 2"></div>
+      <div class="ite"><img class="pic33" src="../img/cervezaserv2.jpg" alt="foto 3"></div>
+      <div class="ite"><img class="pic44" src="../img/barberiaserv2.jpg" alt="foto 4"></div>
     </div>
 
     <div class="ser">
@@ -164,10 +126,18 @@
           <div>
             <h2 class="red">REDES</h2>
             <div class="logredes">
-              <li class="logre"><img src="../img/facebook.png" alt="logo face"></li>
-              <li class="logre"><img src="../img/instagram.png" alt="logo ins"></li>
-              <li class="logre"><img src="../img/gorjeo.png" alt="logo twt"></li>
-              <li class="logre"><img src="../img/whatsapp.png" alt="logo wht"></li>
+              <li class="logre">
+                <a href="#"><img src="../img/facebook.png" alt="logo face">
+              </li></a>
+              <li class="logre">
+                <a href="#"><img src="../img/instagram.png" alt="logo ins">
+              </li></a>
+              <li class="logre">
+                <a href="#"><img src="../img/gorjeo.png" alt="logo twt">
+              </li></a>
+              <li class="logre">
+                <a href="#"><img src="../img/whatsapp.png" alt="logo wht">
+              </li></a>
             </div>
           </div>
 
